--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-fileupload": "^1.1.1-alpha.1",
+    "form-data": "^2.3.3",
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.4",
     "morgan": "~1.9.0"
