--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-fileupload": "^1.1.1-alpha.1",
+    "express-session": "^1.15.6",
     "form-data": "^2.3.3",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.6.3",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.4",
     "morgan": "~1.9.0"
   }
