--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express-fileupload": "^1.1.1-alpha.1",
     "express-session": "^1.15.6",
     "form-data": "^2.3.3",
-    "http-errors": "^1.6.3",
+    "http-error": "0.0.6",
+    "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.4",
     "morgan": "~1.9.0"
